tests/baselines/reference/infiniteExpansionThroughInstantiation2.errors.txt
==== tests/cases/compiler/infiniteExpansionThroughInstantiation2.ts (1 errors) ====
    // instantiating a derived type can cause an infinitely expanding type reference to be generated
    // which could be used in an assignment check for constraint satisfaction
    
    interface AA<T extends AA<T>> // now an error due to referencing type parameter in constraint
                 ~~~~~~~~~~~~~~~
!!! infiniteExpansionThroughInstantiation2.ts(4,14): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    {
        x: T
    }
    
    interface BB extends AA<AA<BB>>
    {
    }